--- a/style.css
+++ b/style.css
@@ -249,7 +249,7 @@ aside a:hover{
     border-radius: .7rem;
 }
 .sale-item-container img{
-    max-width: 100%;
+    max-width: 90%;
     display: block;
     height: auto;
     margin:0 auto 1rem auto ;
@@ -515,7 +515,13 @@ footer{
     padding-bottom: .7rem;
 }
 
-.job-post-date{
+.job-date-no{
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.job-post-date, .job-no{
     font-size: 14px;
     font-weight: 500;
     padding-bottom: .7rem;
@@ -594,6 +600,78 @@ footer{
 .offers-container a{
     color: #A4907C;
     font-weight: 500;
+}
+
+
+/* CSS for shops   */
+
+.shops-main-container #together-container{
+    margin-bottom: 2.3rem;
+}
+
+.shopping-markets ul{
+    display: none;
+    margin-bottom: 3rem;
+}
+
+.shopping-markets{
+    margin: 0 .7rem;
+}
+.shopping-markets button{
+    background: none;
+    border: none;
+}
+.shopping-markets button:hover{
+    cursor: pointer;
+    color: #A4907C;
+}
+.upside-down{
+    transform: rotateX(180deg);
+}
+
+.shopping-markets-sub-container{
+    display: flex;
+    justify-content: space-between;
+    margin:.5rem 0rem;
+    font-weight: 500;
+}
+
+.shop-name{
+    font-weight: 500;
+    font-size: 16px;
+    color: #333;
+    padding: .5rem 0;
+}
+
+.shop-description{
+    color: #333;
+    margin-bottom: .5rem;
+}
+
+.shop-contact{
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+    margin: 1rem 0;
+    font-weight: 600;
+    color: #333;
+}
+.shop-contact a:hover{
+    color: #25D366;
+
+}
+.shop-contact .shop-calling a:hover{
+    color:#075E54;
+}
+.just-span::after{
+    content: '';
+    position: relative;
+    right: 0;
+    display: block;
+    width: 100%;
+    height: 1px;
+    margin-top: 1rem;
+    background-color:hsl(0, 0%, 70%);
 }
 
 /* CSS Style for different sized screens */
