--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ h1{
     left:0%;
     width:100%;
     min-height: 100%;
+    z-index: 999;
     background-color:rgba(0,0,0,0.8);
 }
 
@@ -111,7 +112,7 @@ h1{
     display: block;
     width: 100%;
     height: 1px;
-    margin-top: 1rem;
+    margin-top: .79rem;
     background-color:hsl(0, 0%, 70%);
 }
 
@@ -133,7 +134,7 @@ h1{
     font-size: 1.1rem;
     cursor: pointer;
     width: 1rem;
-    margin: 5rem auto;
+    margin: 4rem auto;
 }
 #go-back:hover{
     color:hsla(0, 0%, 100%);
@@ -612,6 +613,9 @@ footer{
 .shopping-markets ul{
     display: none;
     margin-bottom: 3rem;
+    background-color: #F1DEC9;
+    padding: .5rem;
+    border-radius: .7rem;
 }
 
 .shopping-markets{
@@ -634,6 +638,10 @@ footer{
     justify-content: space-between;
     margin:.5rem 0rem;
     font-weight: 500;
+}
+
+.shop-titles{
+    text-transform: uppercase;
 }
 
 .shop-name{
@@ -671,6 +679,7 @@ footer{
     width: 100%;
     height: 1px;
     margin-top: 1rem;
+    z-index:1;
     background-color:hsl(0, 0%, 70%);
 }
 
